gccida/g0/noce_emit_move_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_move_insn/src/ifcvt.c:1040:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)outer + 2), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_move_insn/src/obj/ifcvt.o] Error 1
